--- a/css/style.css
+++ b/css/style.css
@@ -49,9 +49,11 @@ p {
   padding: 0 15px;
 }
 .icon-block .material-icons {
+  color: rgba(3,62,140,1);
   font-size: inherit;
 }
 
 footer.page-footer {
   margin: 0;
+  color: rgba(3,62,140,1);
 }
