--- a/css/style.css
+++ b/css/style.css
@@ -57,3 +57,5 @@ footer.page-footer {
   margin: 0;
   color: rgba(3,62,140,1);
 }
+
+img, img.scale-with-grid { outline: 0; max-width: 100%; height: auto; width: auto; }
