--- a/css/materialize.css
+++ b/css/materialize.css
@@ -978,7 +978,11 @@
 .cyan-text.text-accent-4 {
   color: #00b8d4 !important;
 }
-
+/*
+.teal {
+  background-color: #009688 !important;
+}
+*/
 .teal {
   background-color: #009688 !important;
 }
