--- a/css/materialize.css
+++ b/css/materialize.css
@@ -2841,6 +2841,7 @@ video.responsive-video {
           transform: translate3d(0, 0, 0);
   -webkit-transform: translateX(-50%);
           transform: translateX(-50%);
+  object-fit: contain;        
 }
 
 .pin-top, .pin-bottom {
